k8s/base/001-namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bitcoin-investment-tracker
  labels:
    name: bitcoin-investment-tracker
